# visual-question-decomposition

./: .env  .gitignore  LICENSE  README.md  conda-lock.yml  download_models.sh  environment.yml  pdm_build.py  pyproject.toml  requirements.txt  setup.py  tango.yml
experiments/: __init__.py  steps.py  vqa.py
maskrcnn_benchmark/: __init__.py
maskrcnn_benchmark/csrc/cuda/: ROIAlign_cuda.cu  ROIPool_cuda.cu  SigmoidFocalLoss_cuda.cu  deform_conv_cuda.cu  deform_conv_kernel_cuda.cu  deform_pool_cuda.cu  ml_nms.cu  nms.cu
maskrcnn_benchmark/layers/: nms.py
maskrcnn_benchmark/utils/: c2_model_loading.py  imports.py  model_zoo.py
src/: predict.py
src/data/: __init__.py  aokvqa.py  download.py  gqa.py  okvqa.py  scienceqa.py  vqav2.py
src/eval/: __init__.py  aokvqa.py  kamalloo.py  vqa.py
src/methods/: __init__.py  e2e.py  successive.py  viper.py
src/methods/prompts/: successive.py
src/methods/prompts/viper/: full_api.txt  no_llm_query.txt  no_simple_query.txt  only_queries.txt  only_queries_aokvqa.txt  only_queries_gqa.txt  only_queries_okvqa.txt  only_queries_scienceqa.txt  only_queries_vqav2.txt
src/models/: __init__.py  blip2.py  gpt.py
viper/: __init__.py  config.py  execution.py  image_patch.py  utils.py  video_segment.py  vision_models.py
viper/base_models/inspyrenet/backbones/: SwinTransformer.py
viper/base_models/xvlm/: xvlm.py
viper/download_models/: __main__.py
viper/xvlm/: bert_config.py  vit.py  xbert.py  xvlm.py
