[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.build]
includes = ["viper/"]

[project]
name = "viper"
version = "1.0.0"
description = "ViperGPT execution engine"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = []
dependencies = [
    "accelerate==0.18.0",
    "bitsandbytes==0.38.1",
    "huggingface-hub==0.20.1",
    "maskrcnn_benchmark @ git+https://github.com/brown-palm/visual-question-decomposition.git@glip",
    "numpy==1.23.5",
    "openai==0.27.7",
    "Pillow==9.4.0",
    "scipy==1.9.3",
    "timm==0.6.12",
    "torch==2.1.0",
    "torchvision==0.16.0",
    "transformers==4.29.2",
    "word2number==1.1"
]
